--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             </div>
         </section>
         <section class="portifolio">
-            <h2 class="portifolio__titulo">Meu Portifólio</h2>
-            <a class="portifolio__botao" href="./portifolio.html">acessar portifólio</a>
+            <h2 class="portifolio__titulo">Meu Portfólio</h2>
+            <a class="portifolio__botao" href="./portifolio.html">acessar portfólio</a>
         </section>
         <section class="contato">
             <h2 class="contato__titulo titulo">Meus Contatos</h2>
