--- a/portifolio.html
+++ b/portifolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
-    <title>Portifólio - Caio Ícaro</title>
+    <title>Portfólio - Caio Ícaro</title>
 </head>
 <body class="portifolio__corpo">
     <section class="perfil">
@@ -33,7 +33,7 @@
         </div>
     </section>
     <section class="pagina-portifolio">
-        <h2 class="pagina-portifolio__titulo">Meu Portifólio</h2>
+        <h2 class="pagina-portifolio__titulo">Meu Portfólio</h2>
         <p class="pagina-portifolio__descricao">Todos os sites estão responsivos, ou seja, o display do site depende do 
             tamanho da sua tela</p>
         <div class="pagina-portifolio__sites">
